--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /public/build/
 npm-debug.log
 yarn-error.log
+/yarn.lock
 ###< symfony/webpack-encore-bundle ###
 
 ###> symfony/phpunit-bridge ###
@@ -25,3 +26,7 @@ yarn-error.log
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> phpstorm ###
+.idea
+###< phpstorm ###
