--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "core-js": "^3.20.3",
         "popper.js": "^1.16.1",
         "sass-loader": "^12.4.0"
+    },
+    "engines": {
+        "node": "14.14.0",
+        "npm" : "6.x"
     }
 }
