--- a/package.json
+++ b/package.json
@@ -14,17 +14,13 @@
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
-        "dev": "yarn dev",
-        "watch": "yarn dev --watch",
-        "build": "yarn production --progress"
+        "dev": "yarn encore dev",
+        "watch": "yarn encore dev --watch",
+        "build": "yarn encore production --progress"
     },
     "dependencies": {
         "core-js": "^3.20.3",
         "popper.js": "^1.16.1",
         "sass-loader": "^12.4.0"
-    },
-    "engines": {
-        "node": "14.14.0",
-        "npm" : "6.x"
     }
 }
